@@ -29,8 +29,10 @@ database-password mypass
 ;   enable-ssl
 ;;  	Enable STARTTLS in connection
 ;   enable-starttls
-;;		Set available ciphers on server - see cipher string from OpenSSL
+;;		Set available ciphers for TLS1.0 to 1.2 - see cipher string from OpenSSL
 ;   openssl-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+;;		Set available cipher suites for TLS1.3
+;	openssl-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
 ;;		Set available TLS versions
 ;   openssl-tlsversion "1.0-1.3"
 ;;		Server certificate
@@ -68,6 +70,7 @@ database-password mypass
 <connector>
 ;   enable-ssl
 ;   openssl-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+; 	 openssl-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
 ;   openssl-tlsversion "1.0-1.3"
 ;   openssl-servercertificate "/usr/local/etc/ssl.crt/server.crt"
 ;   openssl-serverkey "/usr/local/etc/ssl.key/server.key"
@@ -88,6 +91,7 @@ database-password mypass
 <connector>
 ;   enable-starttls
 ;   openssl-ciphers "ALL:!COMPLEMENTOFDEFAULT:!eNULL"
+; 	 openssl-cipher-suites "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256"
 ;   openssl-tlsversion "1.0-1.3"
 ;   openssl-servercertificate "/usr/local/etc/ssl.crt/server.crt"
 ;   openssl-serverkey "/usr/local/etc/ssl.key/server.key"
@@ -108,11 +112,11 @@ database-password mypass
 ;IPv6 connectors
 <connector>
    port		563
-   listen	::1
+   listen	::
 </connector>
 <connector>
    port		119
-   listen	::1
+   listen	::
 </connector>
 
 ; Uncomment 'verbose-mode' if you want to find errors or if you
