@@ -1,5 +1,7 @@
 WendzelNNTPd History:
 ---------------------
+16-Jan-2023 - Implemented Option "openssl-cipher-suites" to select
+              TLS 1.3 cipher suites.
 15-Jan-2023 - Change behaviort of IPv6 "listen ::" in connector.
               It is now IPV6-Only!
 30-Dez-2022 - Implemented Client certificate verify and CRL checks!
